fix:modified overflow of navbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,9 @@
 @import "tailwindcss";
-body{
+
+html,body{
     overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
